# reason-textmate

./: .gitignore  README.md  bench.json  docs.json  package.json  test.json  update-lockfiles.sh
.ci/: esy-build-steps.yml  esy-check-hygiene.yml
bench/: SyntaxBench.re  TokenizeBench.re  dune
bench.esy.lock/: index.json
bench/exe/: TextMateBench.re  dune
doc.esy.lock/: index.json
docs.esy.lock/: index.json
docs/_html/: index.html
docs/textmate/: index.html
docs/textmate/Textmate/: index.html
docs/textmate/Textmate__Grammar/: index.html
docs/textmate/Textmate__RegExp/: index.html
docs/textmate/Textmate__RegExpFactory/: index.html
docs/textmate/Textmate__Rule/: index.html
docs/textmate/Textmate__StringMap/: index.html
docs/textmate/Textmate__TextMate/: index.html
docs/textmate/Textmate__Theme/: index.html
esy.lock/: index.json
src/: ColorTheme.re  ColorTheme.rei  Grammar.re  Grammar.rei  GrammarRepository.re  GrammarRepository.rei  Pattern.re  Plist.re  Plist.rei  RegExp.re  RegExpFactory.re  Rule.re  ScopeStack.re  SimpleXml.re  TextMate.re  TextMate.rei  TextMateGrammar.re  Theme.re  Theme.rei  ThemeScopes.re  Token.re  TokenTheme.re  TokenTheme.rei  Tokenizer.re  Tokenizer.rei  Trie.re  Utility.re  XmlPlistParser.re  dune
test/: FirstMateTests.re  GrammarCaptureTests.re  GrammarTests.re  PatternTests.re  RegExpFactoryTests.re  RegExpTests.re  ThemeIntegrationTests.re  ThemeTests.re  TokenThemeTests.re  dune
test.esy.lock/: index.json
test/first-mate/: tests.json
test/onivim/: tests.json
test/onivim/fixtures/: markdown.json
(+39 files in other folders)
