(library
    (name TextMateTest)
    (public_name textmate-test)
    (flags (:standard (-w -39)))
    (ocamlopt_flags -linkall -g)
    (libraries rely.lib textmate)
    (preprocess (pps ppx_deriving_yojson))
)

(install
    (section bin)
    (package textmate-test)
    (files
        json.json
        haskell.tmLanguage
        lua.tmLanguage
))
